--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,28 +7,26 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-<!--
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
--->
 
     <application
         android:allowBackup="true"
+        android:allowClearUserData="true"
         android:icon="@mipmap/ic_toolbar_logo_vwb"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_toolbar_logo_vwb"
         android:supportsRtl="true"
-        android:allowClearUserData="true"
         android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ForgetPasswordActivity"></activity>
 
         <uses-library
             android:name="org.apache.http.legacy"
-            android:required="false" />
+            android:required="true" />
 
-
-        <activity android:name=".AddClientMaster"
-            android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
+        <activity
+            android:name=".AddClientMaster"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".ClientListActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar" />
